<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.zionroad.com.lifehack.MainActivity">


    <TextView
        android:id="@+id/userName"
        android:text="@string/usr_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/date"
        android:text="@string/date"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"/>

    <TextView
        android:id="@+id/infoText1"
        android:text="@string/desc_remainingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/date"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/infoText2"
        android:text="@string/desc_loggedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoText1"
        android:layout_alignEnd="@+id/infoText1"/>

    <TextView
        android:id="@+id/remainingTime"
        android:text="@string/res_remainingTime"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/infoText1"
        android:layout_alignBottom="@+id/infoText1"
        android:layout_toEndOf="@+id/date"/>

    <TextView
        android:id="@+id/loggedTime"
        android:text="@string/res_loggedTime"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remainingTime"
        android:layout_toEndOf="@+id/date"/>

    <TextView
        android:id="@+id/infoText3"
        android:text="@string/desc_logging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/timeEditText"
        android:hint="@string/hint_logging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:layout_below="@+id/infoText3"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:id="@+id/timeType"
        android:text="@string/desc_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeEditText"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/submitButton"
        android:text="@string/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
